comment worker deploy for testing

--- a/pipelines/resources/deploy-ztp-edgeclusters.yaml
+++ b/pipelines/resources/deploy-ztp-edgeclusters.yaml
@@ -94,22 +94,22 @@ spec:
         workspace: ztp
 
   # Deploy Workers
-  - name: deploy-workers
-    taskRef:
-      name: edgecluster-deploy-workers
-    params:
-      - name: edgeclusters-config
-        value: $(params.edgeclusters-config)
-      - name: kubeconfig
-        value: $(params.kubeconfig)
-      - name: ztp-container-image
-        value: $(params.ztp-container-image)
-      - name: mock
-        value: $(params.mock)
-    runAfter:
-      - deploy-metallb
-    workspaces:
-      - name: ztp
+  # - name: deploy-workers
+  #   taskRef:
+  #     name: edgecluster-deploy-workers
+  #   params:
+  #     - name: edgeclusters-config
+  #       value: $(params.edgeclusters-config)
+  #     - name: kubeconfig
+  #       value: $(params.kubeconfig)
+  #     - name: ztp-container-image
+  #       value: $(params.ztp-container-image)
+  #     - name: mock
+  #       value: $(params.mock)
+  #   runAfter:
+  #     - deploy-metallb
+  #   workspaces:
+  #     - name: ztp
         workspace: ztp
 
   # Deploy ZTPFWUI
@@ -145,7 +145,7 @@ spec:
       - name: mock
         value: $(params.mock)
     runAfter:
-      - deploy-workers
+      # - deploy-workers
       - deploy-ui
     workspaces:
       - name: ztp
